Added an image of the Google logo to the webpage

--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
   <head>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <img
+    src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+    alt="Google logo"
+  />
 </html>
