Moved the logo image inside a div. Also created a secondary Div for the buttons underneath the search bar.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
   <head>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <img
-    src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
-    alt="Google logo"
-  />
+  <div class="logo">
+    <img
+      src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+      alt="Google logo"
+    />
+  </div>
+  <div class="search-form">
+    <input type="text" placeholder="Search" id="searchbar" />
+    <div>
+      <button type="button">Google Search</button>
+      <button type="button">I'm Feeling Lucky</button>
+    </div>
+  </div>
 </html>
