--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <div class="logo">
+  <div id="logo">
     <img
       src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
       alt="Google logo"
