--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+  <nav>
+    <ul>
+      <li><a href="" class="left-nav">About</a></li>
+      <li><a href="" class="left-nav">Store</a></li>
+      <li><a href="" class="right-nav">Gmail</a></li>
+      <li><a href="" class="right-nav">Images</a></li>
+    </ul>
+  </nav>
   <div id="logo">
     <img
       src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
