--- a/index.html
+++ b/index.html
@@ -24,4 +24,20 @@
       <button type="button">I'm Feeling Lucky</button>
     </div>
   </div>
+  <p class="second-lang">Google offered in: <a href="">Français</a></p>
+  <footer class="footer">
+    <span id="country">Canada</span>
+    <ul class="foot-list">
+      <div class="left-foot">
+        <li><a href="">Advertising</a></li>
+        <li><a href="">Business</a></li>
+        <li><a href="">How Search Works</a></li>
+      </div>
+      <div class="right-foot">
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
+        <li><a href="">Settings</a></li>
+      </div>
+    </ul>
+  </footer>
 </html>
